--- a/flask_wiki/templates/wiki/index.html
+++ b/flask_wiki/templates/wiki/index.html
@@ -1,10 +1,16 @@
 {% extends 'wiki/page.html' %}
 {% block content %}
-<div class="row">
+<div class="row mt-4">
     <div class="col-md-8">
+        <a class="btn btn-primary btn-sm float-right" href="{{ url_for('wiki.edit', url=page.url) }}">Edit</a>
+        <h5>{{page.title}}</h5>
+        {% for tag in page.tags.split(',') %}
+        <span class="badge badge-primary">{{ tag }}</span>
+        {% endfor %}
         {{ page }}
     </div>
     <div class="col-md-4">
+        <h5>Table of Content</h5>
         {{ page.toc }}
     </div>
 </div>
