--- a/flask_wiki/templates/wiki/page.html
+++ b/flask_wiki/templates/wiki/page.html
@@ -1,3 +1,5 @@
+{% from 'bootstrap/utils.html' import render_messages %}
+
 <!doctype html>
 <html lang="en">
 
@@ -40,6 +42,7 @@
 
 
     <div class="container">
+        {{ render_messages(dismissible=True, dismiss_animate=True) }}
         {% block content %}
         {% endblock %}
     </div>
