--- a/flask_wiki/templates/wiki/editor.html
+++ b/flask_wiki/templates/wiki/editor.html
@@ -1,19 +1,90 @@
-{% from 'bootstrap/form.html' import render_form_row %}
-{% extends 'wiki/page.html' %}
-{% block content %}
-{% block styles %}
+{% from 'bootstrap/form.html' import render_form_row %} {% extends
+'wiki/page.html' %} {% block content %} {% block styles %}
 <!-- Bootstrap CSS -->
 {{ bootstrap.load_css() }}
 <style>
-    .editor textarea {
-        height: 400px;
-    }
+  .editor textarea {
+    height: 400px;
+  }
 </style>
 {% endblock %}
+<ul class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+    <a
+      class="nav-link active"
+      data-toggle="tab"
+      id="edit-tab"
+      href="#edit"
+      role="tab"
+      aria-controls="home"
+      aria-selected="true"
+      >Edit</a
+    >
+  </li>
+  <li class="nav-item">
+    <a
+      class="nav-link"
+      data-toggle="tab"
+      id="preview-tab"
+      href="#preview"
+      role="tab"
+      aria-controls="profile"
+      aria-selected="false"
+      >Preview</a
+    >
+  </li>
+</ul>
+<div class="tab-content">
+  <div
+    class="tab-pane fade show active"
+    id="edit"
+    role="tabpanel"
+    aria-labelledby="home-tab"
+  >
+    <form class="editor" method="post">
+      {{ form.csrf_token() }}
+      {{ render_form_row([form.title, form.tags]) }}
+      {{ render_form_row([form.body]) }}
+      <input class="btn btn-primary" type="submit" value="Save" />
+    </form>
+  </div>
+  <div
+    class="tab-pane fade"
+    id="preview"
+    role="tabpanel"
+    aria-labelledby="profile-tab"
+  ></div>
+</div>
 
-<form class="editor" method="post">
-    {{ form.csrf_token() }}
-    {{ render_form_row([form.title, form.tags]) }}
-    {{ render_form_row([form.body]) }}
-    <input class="btn btn-primary" type="submit" value="Save">
-</form>{% endblock %}
+{% endblock %} {% block scripts -%}
+{{ super() }}
+<script>
+  $('#preview-tab').on('click', function() {
+    var $form = $('form');
+    var $inputs = $form.find('input, textarea, button');
+    var $pre = $('#preview');
+    var bodycontent = 'title: preview\n\n' + $form.find('textarea').val();
+    $inputs.prop('disabled', true);
+    $pre
+      .removeClass('alert')
+      .removeClass('alert-error')
+      .html('Loading...');
+    $.ajax({
+      url: "{{ url_for('wiki.preview') }}",
+      type: 'POST',
+      data: { body: bodycontent },
+      success: function(msg) {
+        $pre.html(msg);
+        // console.log(msg);
+      },
+      error: function() {
+        $pre.addClass('alert').addClass('alert-error');
+        $pre.html('There was a problem with the preview.');
+      },
+      complete: function() {
+        $inputs.prop('disabled', false);
+      }
+    });
+  });
+</script>
+{% endblock %}
