--- a/flask_wiki/templates/wiki/page.html
+++ b/flask_wiki/templates/wiki/page.html
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('wiki.display', url='demo') }}">MarkDown Demo</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('wiki.list_files') }}">Files</a>
+                </li>
             </ul>
         </div>
     </nav>
