--- a/flask_wiki/templates/wiki/404.html
+++ b/flask_wiki/templates/wiki/404.html
@@ -5,5 +5,9 @@
 
 {% block content %}
 <p>You did not create any content for this page yet.</p>
-<p><a href="{{ url_for('wiki.edit', url=request.path.replace(config.get('WIKI_URL_PREFIX'), '').strip('/')) }}" class="btn btn-primary btn-sm">Create a new page</a></p>
+<p>
+	<a href="{{ url_for('wiki.edit', url=request.path.replace(config.get('WIKI_URL_PREFIX'), '').strip('/')) }}" class="btn btn-outline-primary btn-sm">
+		Create a new page
+	</a>
+</p>
 {% endblock %}
