--- a/flask_wiki/templates/wiki/editor.html
+++ b/flask_wiki/templates/wiki/editor.html
@@ -1,5 +1,7 @@
 {% from 'bootstrap/form.html' import render_form_row %} {% extends
-'wiki/page.html' %} {% block content %} {% block styles %}
+'wiki/page.html' %}
+
+{% block styles %}
 <!-- Bootstrap CSS -->
 {{ bootstrap.load_css() }}
 <style>
@@ -8,6 +10,8 @@
   }
 </style>
 {% endblock %}
+
+{% block content %}
 <ul class="nav nav-tabs" role="tablist">
   <li class="nav-item">
     <a
@@ -45,7 +49,7 @@
       {{ form.csrf_token() }}
       {{ render_form_row([form.title, form.tags]) }}
       {{ render_form_row([form.body]) }}
-      <input class="btn btn-primary" type="submit" value="Save" />
+      <input class="btn btn-outline-primary" type="submit" value="Save" />
     </form>
   </div>
   <div
@@ -56,7 +60,9 @@
   ></div>
 </div>
 
-{% endblock %} {% block scripts -%}
+{% endblock %}
+
+{% block scripts -%}
 {{ super() }}
 <script>
   $('#preview-tab').on('click', function() {
