--- a/flask_wiki/templates/wiki/files.html
+++ b/flask_wiki/templates/wiki/files.html
@@ -1,40 +1,70 @@
-{% extends 'wiki/page.html' %} {% block content %}
-<form class="float-right" method="post" enctype="multipart/form-data">
-    <div class="custom-file">
-      <input type="file" name="file" class="custom-file-input" id="customFile" accept="image/*"/>
-      <label class="custom-file-label" for="customFile">Add an image</label>
-    </div>
-  </form>
-<h1>List of Uploaded Files</h1>
-{% for file in files %}
-<figure class="figure ml-4">
-  <img
-    style="max-width:200px; max-height:200px"
-    src="{{ url_for('uploaded_files', filename=file) }}"
-    class="figure-img img-fluid rounded img-thumbnail"
-    alt="{{ file }}"
-  />
-  <figcaption class="figure-caption text-center">
-    <a href="{{ url_for('uploaded_files', filename=file) }}">{{ file }}</a>
-  </figcaption>
-</figure>
-{% endfor %}
+{% extends 'wiki/page.html' %}
 
-{% endblock %} {% block scripts -%}
+{% block content %}
+<div style="position: relative">
+
+    <div data-delay="1500" class="toast" style="position: absolute; top: 50px; left: 0;">
+        <div class="toast-header text-primary font-weight-bold">
+            Markdown
+        </div>
+        <div class="toast-body">
+            Copied in you clipboard
+        </div>
+    </div>
+
+    <form class="float-right" method="post" enctype="multipart/form-data">
+        <div class="custom-file">
+            <input type="file" name="file" class="custom-file-input" id="customFile" accept="image/*"/>
+            <label class="custom-file-label" for="customFile">Add an image</label>
+        </div>
+    </form>
+
+<h1>List of Uploaded Files</h1>
+
+    {% for file in files %}
+    <figure class="figure ml-4">
+        <img
+            style="max-width:200px; max-height:200px"
+            src="{{ url_for('uploaded_files', filename=file) }}"
+            class="figure-img img-fluid rounded img-thumbnail"
+            alt="{{ file }}"
+        />
+        <figcaption class="figure-caption text-center">
+            <a href="{{ url_for('uploaded_files', filename=file) }}">{{ file }}</a>
+            <button onclick="copy('{{ file }}', '{{ url_for("uploaded_files", filename=file) }}')" class="btn btn-sm btn-outline-primary">
+            <i class="fab fa-markdown"></i>
+            </button>
+        </figcaption>
+    </figure>
+    {% endfor %}
+</div>
+{% endblock %}
+
+{% block scripts -%}
 {{ super() }}
 <script>
+
   // Add the following code if you want the name of the file appear on select
   $('.custom-file-input').on('change', function() {
     var form = $('form');
     form.submit();
-    // var fileName = $(this)
-    //   .val()
-    //   .split('\\')
-    //   .pop();
-    // $(this)
-    //   .siblings('.custom-file-label')
-    //   .addClass('selected')
-    //   .html(fileName);
   });
+
+  // copy the markdown code in the clip board
+  function copy(name, link) {
+    var $temp = $('<div>');
+    $('body').append($temp);
+    $temp
+      .attr('contenteditable', true)
+      .html('![' + name + '](' + link + ' "' + name +'"' + ')')
+      .select()
+      .on('focus', function() {
+        document.execCommand('selectAll', false, null);
+      })
+      .focus();
+    document.execCommand('copy');
+    $temp.remove();
+    $('.toast').toast('show');
+  }
 </script>
 {% endblock %}
