--- a/flask_wiki/templates/wiki/index.html
+++ b/flask_wiki/templates/wiki/index.html
@@ -2,11 +2,12 @@
 {% block content %}
 <div class="row mt-4">
     <div class="col-md-8">
-        <a class="btn btn-primary btn-sm float-right" href="{{ url_for('wiki.edit', url=page.url) }}">Edit</a>
+        <a class="btn btn-outline-primary btn-sm float-right" href="{{ url_for('wiki.edit', url=page.url) }}">Edit</a>
         <h5>{{page.title}}</h5>
         {% for tag in page.tags.split(',') %}
         <span class="badge badge-primary">{{ tag }}</span>
         {% endfor %}
+        <hr>
         {{ page }}
     </div>
     <div class="col-md-4">
