--- a/flask_wiki/templates/wiki/page.html
+++ b/flask_wiki/templates/wiki/page.html
@@ -12,6 +12,7 @@
     {% block styles %}
     <!-- Bootstrap CSS -->
     {{ bootstrap.load_css() }}
+    <link href="{{ url_for('wiki.static', filename='css/all.min.css') }}" rel="stylesheet"> <!--font awsome 5.12.0 -->
     {% endblock %}
 
     <title>Flask-Wiki</title>
@@ -19,8 +20,6 @@
 </head>
 
 <body>
-
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
