pages: languages support
Signed-off-by: Johnny Mariéthoz <Johnny.Mariethoz@rero.ch>

--- a/flask_wiki/templates/wiki/editor.html
+++ b/flask_wiki/templates/wiki/editor.html
@@ -5,7 +5,7 @@
 <!-- Bootstrap CSS -->
 {{ bootstrap.load_css() }}
 <style>
-  .editor textarea {
+  form.editor textarea {
     height: 400px;
   }
 </style>
