--- a/flask_wiki/templates/wiki/files.html
+++ b/flask_wiki/templates/wiki/files.html
@@ -37,7 +37,7 @@
             Markdown
         </div>
         <div class="toast-body">
-            Copied in you clipboard
+            {{ _('Copied in you clipboard') }}
         </div>
     </div>
 
@@ -48,7 +48,7 @@
         </div>
     </form>
 
-<h1>List of Uploaded Files</h1>
+<h1>{{ _('List of Uploaded Files') }}</h1>
 
     {% for file in files %}
     <figure class="figure ml-4">
