--- a/flask_wiki/templates/wiki/index.html
+++ b/flask_wiki/templates/wiki/index.html
@@ -11,7 +11,7 @@
         {{ page }}
     </div>
     <div class="col-md-4">
-        <h5>Table of Content</h5>
+        <h5>{{ _('Table of Content') }}</h5>
         {{ page.toc }}
     </div>
 </div>
