--- a/flask_wiki/templates/wiki/404.html
+++ b/flask_wiki/templates/wiki/404.html
@@ -4,10 +4,10 @@
 {% endblock title %}
 
 {% block content %}
-<p>You did not create any content for this page yet.</p>
+<p>{{ _('You did not create any content for this page yet.') }}</p>
 <p>
 	<a href="{{ url_for('wiki.edit', url=request.path | prune_url) }}" class="btn btn-outline-primary btn-sm">
-		Create a new page
+		{{ _('Create a new page') }}
 	</a>
 </p>
 {% endblock %}
