--- a/flask_wiki/templates/wiki/page.html
+++ b/flask_wiki/templates/wiki/page.html
@@ -30,13 +30,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('wiki.index') }}">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('wiki.index') }}">{{ _('Home') }} <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('wiki.display', url='demo') }}">MarkDown Demo</a>
+                    <a class="nav-link" href="{{ url_for('wiki.display', url='demo') }}">{{ _('MarkDown Demo') }}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('wiki.list_files') }}">Files</a>
+                    <a class="nav-link" href="{{ url_for('wiki.list_files') }}">{{ _('Files') }}</a>
                 </li>
             </ul>
         </div>
