--- a/flask_wiki/templates/wiki/index.html
+++ b/flask_wiki/templates/wiki/index.html
@@ -1,6 +1,15 @@
+<!--
+  This file is part of Flask-Wiki
+  Copyright (C) 2020 RERO
+
+  Flask-Wiki is free software; you can redistribute it and/or modify
+  it under the terms of the Revised BSD License; see LICENSE file for
+  more details
+-->
+
 {% extends 'wiki/page.html' %}
 {% block content %}
-<div class="row mt-4">
+<div class="row mt-4 wiki-page">
     <div class="col-md-8">
         <a class="btn btn-outline-primary btn-sm float-right" href="{{ url_for('wiki.edit', url=page.url) }}">Edit</a>
         <h5>{{page.title}}</h5>
