misc: fix install and configuration
* makes this module usable for external app

Signed-off-by: Johnny Mariéthoz <johnny.mariethoz@rero.ch>

--- a/flask_wiki/static/css/wiki.css
+++ b/flask_wiki/static/css/wiki.css
@@ -1,3 +1,12 @@
+/*
+  This file is part of Flask-Wiki
+  Copyright (C) 2020 RERO
+
+  Flask-Wiki is free software; you can redistribute it and/or modify
+  it under the terms of the Revised BSD License; see LICENSE file for
+  more details.
+*/
+
 .wiki-page .toc ul {
   padding-left: 1em;
 }
@@ -7,26 +16,26 @@
 }
 
 .wiki-files {
-    position: relative;
+  position: relative;
 }
 .wiki-files .toast {
-    position: absolute;
-    top: 50px;
-    left: 0;
+  position: absolute;
+  top: 50px;
+  left: 0;
 }
 .wiki-files figure img {
-    max-width:200px;
-    max-height:200px
+  max-width: 200px;
+  max-height: 200px;
 }
 .wiki-files form .custom-file {
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
 }
-.wiki-files form input[type=file] {
-    font-size: 100px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
+.wiki-files form input[type='file'] {
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
 }
