--- a/flask_wiki/templates/wiki/404.html
+++ b/flask_wiki/templates/wiki/404.html
@@ -7,16 +7,20 @@
   more details
 -->
 
-{% extends "wiki/page.html" %}
+{% extends config.get('WIKI_BASE_TEMPLATE') %}
 {% block title -%}
-	Wiki page not found!
+Wiki page not found!
 {% endblock title %}
 
+{% block navigation %}
+{% endblock %}
+
 {% block content %}
+<h1>{{ _('Page does not exists.') }}</h1>
 <p>{{ _('You did not create any content for this page yet.') }}</p>
 <p>
-	<a href="{{ url_for('wiki.edit', url=request.path | prune_url) }}" class="btn btn-outline-primary btn-sm">
-		{{ _('Create a new page') }}
-	</a>
+  <a href="{{ url_for('wiki.edit', url=request.path | prune_url) }}" class="btn btn-outline-primary btn-sm">
+    {{ _('Create a new page') }}
+  </a>
 </p>
 {% endblock %}
