--- a/flask_wiki/templates/wiki/page.html
+++ b/flask_wiki/templates/wiki/page.html
@@ -7,78 +7,25 @@
   more details
 -->
 
-{% from 'bootstrap/utils.html' import render_messages %}
+{% extends config.get('WIKI_BASE_TEMPLATE') %}
+{% set active_page = "page" %}
 
-<!doctype html>
-<html lang="en">
-
-<head>
-    {% block head %}
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    {% block styles %}
-    <!-- Bootstrap CSS -->
-    {{ bootstrap.load_css() }}
-    <link href="{{ url_for('wiki.static', filename='css/all.min.css') }}" rel="stylesheet"> <!--font awsome 5.12.0 -->
-    <link href="{{ url_for('wiki.static', filename='css/wiki.css') }}" rel="stylesheet">
-    {% endblock %}
-
-    <title>Flask-Wiki</title>
-    {% endblock %}
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('wiki.index') }}">{{ _('Home') }} <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('wiki.display', url='demo') }}">{{ _('MarkDown Demo') }}</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('wiki.list_files') }}">{{ _('Files') }}</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('wiki.search') }}">{{ _('Search') }}</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container py-4">
-        {{ render_messages(dismissible=True, dismiss_animate=True) }}
-        {% block content %}
-        {% endblock %}
+{% block content %}
+<div class="row mt-4 wiki-page">
+    <div class="col-md-8">
+        {% if can_edit_wiki %}
+        <a class="btn btn-outline-primary btn-sm float-right" href="{{ url_for('wiki.edit', url=page.url) }}">Edit</a>
+        {% endif %}
+        <h5>{{page.title}}</h5>
+        {% for tag in page.tags.split(',') %}
+        <span class="badge badge-primary">{{ tag }}</span>
+        {% endfor %}
+        <hr>
+        {{ page }}
     </div>
-
-    <footer class="container py-5">
-        <div class="row">
-            <div class="col-md-6">
-                <small class="d-block mb-3 text-muted">RERO &copy; 2020</small>
-            </div>
-            <div class="col-md-6">
-                {% for language in g._wiki.languages -%}
-                    <a class="ml-2" href="{{ url_for('change_language', ln=language) }}">{{ language }}</a>
-                {%- endfor %}
-            </div>
-        </div>
-    </footer>
-
-    {% block scripts %}
-    <!-- Optional JavaScript -->
-    {{ bootstrap.load_js() }}
-    <script type="text/javascript" src="{{ url_for('wiki.static', filename='js/wiki.js') }}"></script>
-    {% endblock %}
-</body>
-
-</html>
+    <div class="col-md-4">
+        <h5>{{ _('Table of Content') }}</h5>
+        {{ page.toc }}
+    </div>
+</div>
+{% endblock %}
