--- a/flask_wiki/templates/wiki/403.html
+++ b/flask_wiki/templates/wiki/403.html
@@ -16,11 +16,6 @@ Wiki page not found!
 {% endblock %}
 
 {% block content %}
-<h1>{{ _('Page does not exists.') }}</h1>
-<p>{{ _('You did not create any content for this page yet.') }}</p>
-<p>
-  <a href="{{ url_for('wiki.edit', url=request.path | prune_url) }}" class="btn btn-outline-primary btn-sm">
-    {{ _('Create a new page') }}
-  </a>
-</p>
+<h1>{{ _('Forbidden') }}</h1>
+<p>{{ _('You are not allowed to see this page.') }}</p>
 {% endblock %}
